--- a/package.json
+++ b/package.json
@@ -2,10 +2,8 @@
   "name": "paw-backend",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
-  "main": "index.js",
   "scripts": {
-    "start": "nodemon app.mjs",
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,7 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.4.1",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "nodemon": "^3.0.3",
     "openai": "^4.26.0"
