updating gitignore variables

--- a/.env_ example
+++ b/.env_ example
@@ -1,4 +1,5 @@
 API_KEY='sk-24908230423ihfdhwehf3849r43r4049350'
 
-// this is an example\
-// use your api here
+// this is an example
+//Create a env file 
+// Use your own api from 
